[package]
name = "png_chunk_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug-assertions = false
incremental = false
rpath = false
overflow-checks = false
